[metadata]
name = lks-checker
version = 1.0.0
author = Erik Sargazakov
author_email = deftsly@outlook.com
description = A Python micro-service that periodically health-checks a list of websites, optionally searching for a regex pattern in returned HTML, then sends the resulting health reports in Avro format to a Kafka topic
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, kafka, microservice, avro, healthcheck
url = https://github.com/laksyt/lks-checker
license = MIT
license_file = LICENSE
project_urls =
    Managed Kafka/PostgreSQL = https://aiven.io
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking

[options]
py_modules = main
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp == 3.7.4.post0
    async-timeout == 3.0.1; python_full_version >= '3.5.3'
    attrs == 20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    chardet == 4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
    dacite == 1.6.0; python_version >= '3.6'
    dataclasses-avroschema == 0.20.2
    faker == 8.0.0; python_version >= '3.6'
    fastavro == 1.3.0; python_version >= '3.6'
    idna == 3.1; python_version >= '3.4'
    inflect == 5.3.0; python_version >= '3.6'
    kafka-python == 2.0.2
    multidict == 5.1.0; python_version >= '3.6'
    python-dateutil == 2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    pytz == 2021.1
    pyyaml == 5.4.1
    six == 1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    text-unidecode == 1.3
    typing-extensions == 3.7.4.3
    yarl == 1.6.3; python_version >= '3.6'

[options.entry_points]
console_scripts =
    lks-checker = main:main

[options.packages.find]
include = laksyt*
